actualizacion menu slide

--- a/assets/css/template-xpressart.css
+++ b/assets/css/template-xpressart.css
@@ -926,10 +926,10 @@ menu
   background-image: url(../images/menu-item-01.jpg);
 }
 .card2 {
-  background-image: url(../images/menu-item-02.jpg);
+  background-image: url(../images/menu-item-02.png);
 }
 .card3 {
-  background-image: url(../images/menu-item-03.jpg);
+  background-image: url(../images/menu-item-03.png);
 }
 .card4 {
   background-image: url(../images/menu-item-04.jpg);
